<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HideNSeek</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_host_login">Create Match</string>
    <string name="login_match_name">Match Name</string>

    <string-array name="login_match_types">
        <item>Hide and Seek</item>
        <item>Sandbox</item>
    </string-array>

    <string name="login_match_type_title">Match Type</string>
    <string name="title_activity_join_login">Join Match</string>
    <string name="match_password">login_password_text_title</string>
    <string name="login_password_title">Match Password</string>
    <string name="login_no_matches">No matches found</string>
    <string name="title_activity_host_config">Config Match</string>
    <string name="config_seek_time">Search Time</string>
    <string name="config_counting_time"></string>
    <string name="config_count_time">Count Time</string>
    <string name="seek_time_hint">time in mins.</string>
    <string name="count_time_hint">time in secs.</string>
    <string name="config_players">Players</string>
    <string name="title_activity_active">Active Game</string>
    <string name="player_name">Player Name</string>
    <string name="pref_player_name">Player Name</string>
    <string name="enter_player_name">Enter a Player name</string>
    <string name="pref_instruction">Enter new Count Time and \nSeek Time and then Submit!</string>
    <string name="pref_count_time">Default Count Time</string>
    <string name="pref_seek_time">Default Seek Time</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_select_match">Select Match</string>
    <string name="title_splash">Select Match</string>
    <string name="players_List">Players</string>
    <string name="current_Players">Current Players</string>
    <string name="found_btn">Found</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="Submit">Submit</string>
    <string name="Exit">Exit</string>
    <string name="title_AlarmManagerBroadcastReceiver">Alarm Manager</string>
    <string name="descr">image</string>
    <string name="select_match">Select Match</string>
    <string name="endGameMessage">Thank you for playing hide and seek.  If you wish to play again, please hit the button to go back to the main screen.  If not, please remember to leave ideas or feedback for this alpha test.  Thank you!</string>
    <string name="goHome">Go Back to Homepage</string>
    <string name="title_activity_temp_to_home">TempToHome</string>
    <string name="title_activity_temp">Landing Page</string>
    <string name="title_activity_to_home">ToHome</string>

</resources>
