<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cascadia.hidenseek.Settings"
    tools:ignore="MergeRootFrame" >
    
    <ImageView
        android:contentDescription="@string/descr"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.08" >

                <TextView
                    android:id="@+id/prefPlayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/pref_player_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/headings" />

                <EditText
                    android:id="@+id/prefPlayerNameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/prefPlayerName"
                    android:layout_alignParentRight="true"
                    android:layout_alignStart="@+id/prefPlayerName"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/prefPlayerName"
                    android:layout_marginTop="5dp"
                    android:hint="@string/enter_player_name"
                    android:ems="10" /> 
            </RelativeLayout>
            	
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08" >

                <TextView
                    android:id="@+id/prefCountTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/pref_count_time"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/headings" />
                
                <EditText
                    android:id="@+id/prefCountTimeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/prefCountTime"
                    android:layout_alignParentRight="true"
                    android:layout_alignStart="@+id/prefCountTime"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/prefCountTime"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/count_time_hint"
                    android:inputType="time" /> 
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08" >

                <TextView
                    android:id="@+id/prefSeekTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:text="@string/pref_seek_time"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/headings" />

                <EditText
                    android:id="@+id/prefSeekTimeInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignStart="@+id/prefSeekTime"
                    android:layout_alignLeft="@+id/prefSeekTime"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/prefSeekTime"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:hint="@string/seek_time_hint"
                    android:inputType="time"  /> 
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:layout_marginTop="15dp" >
                <Button 
                    android:id="@+id/submit" 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="17dp"   
                    android:layout_marginStart="17dp"              
                    android:text="@string/Submit" /> 
                    
                <Button 
                    android:id="@+id/exit" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="75dp" 
                    android:layout_toRightOf="@+id/submit" 
                    android:layout_marginStart="75dp" 
                    android:layout_toEndOf="@+id/submit" 
                    android:text="@string/Exit" />
                
                <TextView
                    android:id="@+id/prefInstruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/submit" 
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pref_instruction"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/headings" />
               
            </RelativeLayout>
            
    	</LinearLayout>
    	</ScrollView> 
    </FrameLayout>
