
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/join_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cascadia.hidenseek.HostLogin"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:contentDescription="@string/descr"
        android:id="@+id/JoinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.08" >

                <TextView
                    android:id="@+id/selectMatchTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="17dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/login_match_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/headings" />

                <ImageView
                    android:contentDescription="@string/descr"
                    android:id="@+id/selectMatchHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/selectMatchTitle"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_help" />

                <Button
                    android:id="@+id/btnJoinSelectMatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/selectMatchTitle"
                    android:layout_alignEnd="@+id/selectMatchHelp"
                    android:layout_alignLeft="@+id/selectMatchTitle"
                    android:layout_alignRight="@+id/selectMatchHelp"
                    android:layout_below="@+id/selectMatchTitle"
                    android:text="@string/select_match" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08" >

                <TextView
                    android:id="@+id/JoinPasswordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="17dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/login_password_title"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/headings" />

                <ImageView
                    android:contentDescription="@string/descr"
                    android:id="@+id/JoinPasswordHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/JoinPasswordTitle"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_help" />

                <EditText
                    android:id="@+id/JoinPasswordInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/JoinPasswordTitle"
                    android:layout_alignEnd="@+id/JoinPasswordHelp"
                    android:layout_alignLeft="@+id/JoinPasswordTitle"
                    android:layout_alignRight="@+id/JoinPasswordHelp"
                    android:layout_below="@+id/JoinPasswordTitle"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="textPassword" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.08" >

                <TextView
                    android:id="@+id/PlayerNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="17dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/player_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/headings" />

                <ImageView
                    android:contentDescription="@string/descr"
                    android:id="@+id/PlayerNameHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/PlayerNameTitle"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_help" />

                <EditText
                    android:id="@+id/PlayerNameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/PlayerNameTitle"
                    android:layout_alignEnd="@+id/PlayerNameHelp"
                    android:layout_alignLeft="@+id/PlayerNameTitle"
                    android:layout_alignRight="@+id/PlayerNameHelp"
                    android:layout_below="@+id/PlayerNameHelp"
                    android:layout_marginTop="5dp"
                    android:ems="10" />
            </RelativeLayout>

            <ImageButton
                android:contentDescription="@string/descr"
                android:id="@+id/btnJoinJoin"
                android:layout_width="153dp"
                android:layout_height="149dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.08"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/btn_join_set" />
        </LinearLayout>

    </ScrollView>




</FrameLayout>

